--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BioNova – Sustainable Development NGO</title>
+  <title>YCI</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Font Awesome -->
@@ -336,7 +336,7 @@
     <!-- Hero Section -->
     <section class="relative min-h-screen flex items-center justify-center overflow-hidden">
       <div class="absolute inset-0 z-0">
-        <img src="content/images/tester.jpg" alt="Hero background" class="w-full h-full object-cover opacity-60">
+        <img src="content/images/WhatsApp Image 2025-12-17 at 00.38.32.jpeg" alt="Hero background" class="w-full h-full object-cover opacity-60">
         <div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/20 to-black/40"></div>
       </div>
       
@@ -397,67 +397,111 @@
       </div>
     </section>
 
-    <!-- About Us -->
-    <section class="py-16 page-load delay-3">
-      <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="pure-glass rounded-3xl overflow-hidden group">
-          <img src="content/images/Screenshot 2025-12-16 222947.png" alt="About Us" class="w-full h-64 sm:h-96 object-cover transition-transform duration-700 group-hover:scale-105">
-          <div class="p-6 md:p-8">
-            <h2 class="text-3xl md:text-4xl font-bold mb-4">Our Commitment to bring Change</h2>
-            <p class="text-white mb-4">placeholder</p>
-            <p class="text-white mb-4">Our mission  placeholder</p>
-            <p class="text-white">placeholder</p>
-            <a href="articles.html" class="mt-6 inline-block px-6 py-3 bg-gradient-to-r from-primary to-secondary text-white rounded-full font-semibold hover:scale-105 transition glow-button">
-              Explore Our Impact
-            </a>
+<!-- About Us -->
+<section class="py-16 page-load delay-3">
+  <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="pure-glass rounded-3xl overflow-hidden group">
+      <img 
+        src="content/images/Screenshot 2025-12-16 222947.png" 
+        alt="Youth leading climate action in Bangladesh" 
+        class="w-full h-64 sm:h-96 object-cover transition-transform duration-700 group-hover:scale-105"
+        loading="lazy"
+      >
+      <div class="p-6 md:p-8">
+        <h2 class="text-3xl md:text-4xl font-bold text-white mb-4">
+          Our Commitment to Bring Change
+        </h2>
+        <p class="text-white mb-4">
+          We envision a climate-resilient Bangladesh where youth-led innovation, inclusive community participation, and sustainable solutions create a greener, healthier, and more just future for all.
+        </p>
+        <p class="text-white mb-4">
+          Our mission is to empower young people with knowledge, leadership skills, and resources to address climate challenges, uplift vulnerable communities, and promote sustainable development across Bangladesh.
+        </p>
+        <a 
+          href="articles.html" 
+          class="mt-6 inline-block px-6 py-3 bg-gradient-to-r from-primary to-secondary text-white rounded-full font-semibold hover:scale-105 transition-transform duration-300 glow-button"
+        >
+          Explore Our Impact
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- FAQ Section -->
+<section class="py-16 page-load delay-4">
+  <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+    <h2 class="text-3xl md:text-4xl font-bold text-center mb-8">Frequently Asked Questions</h2>
+    <div id="faq-accordion" class="space-y-4">
+      <!-- FAQ 1 -->
+      <div class="pure-glass rounded-xl overflow-hidden">
+        <button onclick="toggleFAQ(this)" aria-expanded="false" class="w-full flex justify-between items-center p-5 text-left font-semibold text-white hover:text-teal-300 transition" aria-controls="faq1">
+          <span>What is YCI Bangladesh?</span>
+          <i class="fas fa-chevron-down transition-transform"></i>
+        </button>
+        <div id="faq1" class="faq-answer max-h-0 overflow-hidden transition-all duration-300" role="region" aria-hidden="true">
+          <div class="p-5 pt-0 text-white">
+            YCI Bangladesh is a youth-led initiative working to strengthen climate resilience, environmental awareness, and sustainable development across Bangladesh through education, advocacy, and community-based action.
           </div>
         </div>
       </div>
-    </section>
 
-    <!-- FAQ Section -->
-    <section class="py-16 page-load delay-4">
-      <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="text-3xl md:text-4xl font-bold text-center mb-8">Frequently Asked Questions</h2>
-        <div id="faq-accordion" class="space-y-4">
-          <div class="pure-glass rounded-xl overflow-hidden">
-            <button onclick="toggleFAQ(this)" class="w-full flex justify-between items-center p-5 text-left font-semibold text-white hover:text-teal-300 transition">
-              <span>placeholder</span>
-              <i class="fas fa-chevron-down transition-transform"></i>
-            </button>
-            <div class="faq-answer max-h-0 overflow-hidden transition-all duration-300">
-              <div class="p-5 pt-0 text-white">
-                placeholder
-              </div>
-            </div>
-          </div>
-
-          <div class="pure-glass rounded-xl overflow-hidden">
-            <button onclick="toggleFAQ(this)" class="w-full flex justify-between items-center p-5 text-left font-semibold text-white hover:text-teal-300 transition">
-              <span>placeholder</span>
-              <i class="fas fa-chevron-down transition-transform"></i>
-            </button>
-            <div class="faq-answer max-h-0 overflow-hidden transition-all duration-300">
-              <div class="p-5 pt-0 text-white">
-                placeholder <a href="contact.html" class="text-teal-300 hover:underline">Contact</a> page to get involved.
-              </div>
-            </div>
-          </div>
-
-          <div class="pure-glass rounded-xl overflow-hidden">
-            <button onclick="toggleFAQ(this)" class="w-full flex justify-between items-center p-5 text-left font-semibold text-white hover:text-teal-300 transition">
-              <span>placeholder</span>
-              <i class="fas fa-chevron-down transition-transform"></i>
-            </button>
-            <div class="faq-answer max-h-0 overflow-hidden transition-all duration-300">
-              <div class="p-5 pt-0 text-white">
-                placeholder
-              </div>
-            </div>
+      <!-- FAQ 2 -->
+      <div class="pure-glass rounded-xl overflow-hidden">
+        <button onclick="toggleFAQ(this)" aria-expanded="false" class="w-full flex justify-between items-center p-5 text-left font-semibold text-white hover:text-teal-300 transition" aria-controls="faq2">
+          <span>Who can join YCI Bangladesh?</span>
+          <i class="fas fa-chevron-down transition-transform"></i>
+        </button>
+        <div id="faq2" class="faq-answer max-h-0 overflow-hidden transition-all duration-300" role="region" aria-hidden="true">
+          <div class="p-5 pt-0 text-white">
+            Students, young professionals, volunteers, and climate enthusiasts can join and participate in campaigns, training programs, and research-based activities.
           </div>
         </div>
       </div>
-    </section>
+
+      <!-- FAQ 3 -->
+      <div class="pure-glass rounded-xl overflow-hidden">
+        <button onclick="toggleFAQ(this)" aria-expanded="false" class="w-full flex justify-between items-center p-5 text-left font-semibold text-white hover:text-teal-300 transition" aria-controls="faq3">
+          <span>What types of activities does YCI Bangladesh conduct?</span>
+          <i class="fas fa-chevron-down transition-transform"></i>
+        </button>
+        <div id="faq3" class="faq-answer max-h-0 overflow-hidden transition-all duration-300" role="region" aria-hidden="true">
+          <div class="p-5 pt-0 text-white">
+            We run awareness campaigns, capacity-building workshops, community-led projects, research initiatives, school climate programs, and environmental volunteering events.
+          </div>
+        </div>
+      </div>
+
+      <!-- FAQ 4 -->
+      <div class="pure-glass rounded-xl overflow-hidden">
+        <button onclick="toggleFAQ(this)" aria-expanded="false" class="w-full flex justify-between items-center p-5 text-left font-semibold text-white hover:text-teal-300 transition" aria-controls="faq4">
+          <span>Does YCI Bangladesh collaborate with institutions?</span>
+          <i class="fas fa-chevron-down transition-transform"></i>
+        </button>
+        <div id="faq4" class="faq-answer max-h-0 overflow-hidden transition-all duration-300" role="region" aria-hidden="true">
+          <div class="p-5 pt-0 text-white">
+            Yes. We collaborate with universities, schools, youth networks, NGOs, local government bodies, and climate-focused organizations to expand impact and reach.
+          </div>
+        </div>
+      </div>
+
+      <!-- FAQ 5 -->
+      <div class="pure-glass rounded-xl overflow-hidden">
+        <button onclick="toggleFAQ(this)" aria-expanded="false" class="w-full flex justify-between items-center p-5 text-left font-semibold text-white hover:text-teal-300 transition" aria-controls="faq5">
+          <span>How can I participate in YCI Bangladesh's climate projects?</span>
+          <i class="fas fa-chevron-down transition-transform"></i>
+        </button>
+        <div id="faq5" class="faq-answer max-h-0 overflow-hidden transition-all duration-300" role="region" aria-hidden="true">
+          <div class="p-5 pt-0 text-white">
+            You can join by signing up as a volunteer, applying to our programs, attending workshops, or partnering with us through institutional collaborations.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+ 
 
     <!-- Articles -->
     <section class="py-16 page-load delay-5">
@@ -491,43 +535,102 @@
     </section>
   </main>
 
-  <!-- Footer -->
-  <footer class="bg-gray-900/90 text-white backdrop-blur-lg">
-    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-12 md:py-16">
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-        <div><h3 class="font-bold mb-4 text-xl">YCI</h3><p class="text-gray-400 mb-6">Building sustainable futures through innovation, equity, and community-led action.</p></div>
+   <!-- Footer -->
+  <footer class="bg-gray-900 text-gray-300">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 md:py-16">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12">
+        <!-- Brand -->
         <div>
-          <h4 class="font-bold mb-4 text-lg">Quick Links</h4>
-          <ul class="space-y-3 text-gray-400">
-            <li><a href="services.html" class="hover:text-white hover:translate-x-1 transition inline-block">About Us</a></li>
-            <li><a href="articles.html" class="hover:text-white hover:translate-x-1 transition inline-block">Publications</a></li>
-            <li><a href="team.html" class="hover:text-white hover:translate-x-1 transition inline-block">Our Team</a></li>
-            <li><a href="contact.html" class="hover:text-white hover:translate-x-1 transition inline-block">Contact</a></li>
+          <h3 class="text-white font-bold mb-2">BioNova</h3>
+          <p class="text-white mb-2">
+            Building sustainable futures through innovation, equity, and community-led action.
+          </p>
+          <div class="flex space-x-3">
+            <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </div>
+        </div>
+
+        <!-- Quick Links -->
+        <div>
+          <h4 class="font-bold text-white mb-4">Quick Links</h4>
+          <ul class="space-y-2.5 text-sm">
+            <li><a href="services.html" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>About Us</a></li>
+            <li><a href="articles.html" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Publications</a></li>
+            <li><a href="team.html" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Our Team</a></li>
+            <li><a href="contact.html" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Contact</a></li>
+            <li><a href="contact.html" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Careers</a></li>
           </ul>
         </div>
+
+        <!-- Contact -->
         <div>
-          <h4 class="font-semibold text-lg mb-4">Contact</h4>
-          <ul class="space-y-4 text-gray-400">
-            <li class="hover:text-white transition cursor-default">Dhaka, Bangladesh</li>
-            <li><a href="mailto:info@bionova.org" class="hover:text-white transition">info@bionova.org</a></li>
-            <li class="hover:text-white transition cursor-default">+880 17XX-XXXXXX</li>
+          <h4 class="text-white font-semibold text-lg mb-4">Contact</h4>
+          <ul class="space-y-3 text-sm">
+            <li class="flex items-start">
+              <i class="fas fa-map-marker-alt mt-1 mr-3 text-accent"></i>
+              <span class="text-white mb-2">Dhaka, Bangladesh</span>
+            </li>
+            <li class="flex items-start">
+              <i class="fas fa-envelope mt-1 mr-3 text-accent"></i>
+              <span class="text-white mb-2">info@bionova.org</span>
+            </li>
+            <li class="flex items-start">
+              <i class="fas fa-phone mt-1 mr-3 text-accent"></i>
+              <span class="text-white mb-2">+880 17XX-XXXXXX</span>
+            </li>
           </ul>
         </div>
+
+        <!-- Resources -->
         <div>
-          <h4 class="font-semibold text-lg mb-4">Resources</h4>
-          <ul class="space-y-3 text-gray-400">
-            <li><a href="#" class="hover:text-white hover:translate-x-1 transition inline-block">Annual Reports</a></li>
-            <li><a href="#" class="hover:text-white hover:translate-x-1 transition inline-block">Research Papers</a></li>
-            <li><a href="#" class="hover:text-white hover:translate-x-1 transition inline-block">Case Studies</a></li>
+          <h4 class="text-white font-semibold text-lg mb-4">Resources</h4>
+          <ul class="space-y-2.5 text-sm">
+            <li><a href="#" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Annual Reports</a></li>
+            <li><a href="#" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Research Papers</a></li>
+            <li><a href="#" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Case Studies</a></li>
+            <li><a href="#" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Partnerships</a></li>
           </ul>
         </div>
       </div>
-      <div class="border-t border-white/10 mt-12 pt-8 text-center text-gray-500">
-        <p>&copy; 2025 YCI. All rights reserved.</p>
+
+      <!-- Copyright -->
+      <div class="border-t border-white/10 mt-12 pt-8 text-center text-sm">
+        <p>&copy; 2025 yci. All rights reserved.</p>
+        <div class="mt-3 space-x-4">
+          <a href="#" class="hover:text-white transition-colors">Privacy</a>
+          <span class="text-gray-600">•</span>
+          <a href="#" class="hover:text-white transition-colors">Terms</a>
+          <span class="text-gray-600">•</span>
+          <a href="contact.html" class="hover:text-white transition-colors">Contact</a>
+        </div>
       </div>
     </div>
   </footer>
 
+  <!-- Floating Action Button -->
+  <a href="contact.html" 
+     class="floating-btn fixed bottom-6 right-6 md:bottom-8 md:right-8 px-6 py-4 rounded-full bg-gradient-to-r from-white/20 to-white/10 text-white flex items-center justify-center font-semibold text-lg shadow-2xl hover:scale-105 transition-all duration-300 z-40 border border-white/30"
+     aria-label="Join Our Mission">
+    Join Us
+  </a>
+
+    <!-- Floating Action Button -->
+  <a href="team.html" 
+     class="floating-btn fixed bottom-6 left-6 md:bottom-8 md:left-8 px-6 py-4 rounded-full bg-gradient-to-r from-white/20 to-white/10 text-white flex items-center justify-center font-semibold text-lg shadow-2xl hover:scale-105 transition-all duration-300 z-40 border border-white/30"
+     aria-label="Join Our Mission">
+    Our Team
+  </a>
   <!-- Scripts -->
   <script>
     // Mobile menu
