--- a/index.html
+++ b/index.html
@@ -541,9 +541,9 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12">
         <!-- Brand -->
         <div>
-          <h3 class="text-white font-bold mb-2">BioNova</h3>
+          <h3 class="text-white font-bold mb-2">Yci</h3>
           <p class="text-white mb-2">
-            Building sustainable futures through innovation, equity, and community-led action.
+             To build a climate resilient Bangladesh where youth leads toward sustainable Change
           </p>
           <div class="flex space-x-3">
             <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
@@ -583,11 +583,11 @@
             </li>
             <li class="flex items-start">
               <i class="fas fa-envelope mt-1 mr-3 text-accent"></i>
-              <span class="text-white mb-2">info@bionova.org</span>
+              <span class="text-white mb-2">ycibangladesh@gmail.com</span>
             </li>
             <li class="flex items-start">
               <i class="fas fa-phone mt-1 mr-3 text-accent"></i>
-              <span class="text-white mb-2">+880 17XX-XXXXXX</span>
+              <span class="text-white mb-2">01919403296 / 01980632583</span>
             </li>
           </ul>
         </div>
