--- a/articles.html
+++ b/articles.html
@@ -375,9 +375,9 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12">
         <!-- Brand -->
         <div>
-          <h3 class="text-white font-bold mb-2">BioNova</h3>
+          <h3 class="text-white font-bold mb-2">Yci</h3>
           <p class="text-white mb-2">
-            Building sustainable futures through innovation, equity, and community-led action.
+             To build a climate resilient Bangladesh where youth leads toward sustainable Change
           </p>
           <div class="flex space-x-3">
             <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
@@ -440,7 +440,7 @@
 
       <!-- Copyright -->
       <div class="border-t border-white/10 mt-12 pt-8 text-center text-sm">
-        <p>&copy; 2025 BioNova. All rights reserved.</p>
+        <p>&copy; 2025 yci. All rights reserved.</p>
         <div class="mt-3 space-x-4">
           <a href="#" class="hover:text-white transition-colors">Privacy</a>
           <span class="text-gray-600">•</span>
