--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
               </div>
               <div>
                 <h3 class="text-white font-semibold">Email</h3>
-                <p class="text-white/80">jitbe@nouka.com</p>
+                <p class="text-white/80">jycibangladesh@gmail.com</p>
               </div>
             </div>
 
@@ -226,7 +226,7 @@
 
       <!-- Copyright -->
       <div class="border-t border-white/10 mt-12 pt-8 text-center text-sm">
-        <p>&copy; 2025 BioNova. All rights reserved.</p>
+        <p>&copy; 2025 yci. All rights reserved.</p>
         <div class="mt-3 space-x-4">
           <a href="#" class="hover:text-white transition-colors">Privacy</a>
           <span class="text-gray-600">•</span>
@@ -271,7 +271,7 @@
       // Construct the mailto link
       const subject = encodeURIComponent(`Message from ${name}`);
       const body = encodeURIComponent(`From: ${name} <${email}>\n\n${message}`);
-      const recipient = 'contact@bionova.org';
+      const recipient = 'ycibangladesh@gmail.com';
       const mailtoLink = `mailto:${recipient}?subject=${subject}&body=${body}`;
 
       // Open email client
