--- a/services.html
+++ b/services.html
@@ -97,15 +97,15 @@
     </div>
   </main>
 
-   <!-- Footer -->
+  <!-- Footer -->
   <footer class="bg-gray-900 text-gray-300">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 md:py-16">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12">
         <!-- Brand -->
         <div>
-          <h3 class="text-white font-bold mb-2">YCI</h3>
+          <h3 class="text-white font-bold mb-2">Yci</h3>
           <p class="text-white mb-2">
-            Building sustainable futures through innovation, equity, and community-led action.
+             To build a climate resilient Bangladesh where youth leads toward sustainable Change
           </p>
           <div class="flex space-x-3">
             <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
@@ -141,15 +141,15 @@
           <ul class="space-y-3 text-sm">
             <li class="flex items-start">
               <i class="fas fa-map-marker-alt mt-1 mr-3 text-accent"></i>
-              <span class="text-white mb-2">Dhaka, Bangladesh</span>
+              <span class="text-white mb-2">University of Dhaka, Dhaka, Bangladesh</span>
             </li>
             <li class="flex items-start">
               <i class="fas fa-envelope mt-1 mr-3 text-accent"></i>
-              <span class="text-white mb-2">info@bionova.org</span>
+              <span class="text-white mb-2">ycibangladesh@gmail.com</span>
             </li>
             <li class="flex items-start">
               <i class="fas fa-phone mt-1 mr-3 text-accent"></i>
-              <span class="text-white mb-2">+880 17XX-XXXXXX</span>
+              <span class="text-white mb-2">01919403296 / 01980632583</span>
             </li>
           </ul>
         </div>
@@ -168,7 +168,7 @@
 
       <!-- Copyright -->
       <div class="border-t border-white/10 mt-12 pt-8 text-center text-sm">
-        <p>&copy; 2025 BioNova. All rights reserved.</p>
+        <p>&copy; 2025 yci. All rights reserved.</p>
         <div class="mt-3 space-x-4">
           <a href="#" class="hover:text-white transition-colors">Privacy</a>
           <span class="text-gray-600">•</span>
@@ -179,7 +179,7 @@
       </div>
     </div>
   </footer>
-  
+
   <!-- Floating Action Button -->
   <a href="contact.html" 
      class="floating-btn fixed bottom-6 right-6 md:bottom-8 md:right-8 px-6 py-4 rounded-full bg-gradient-to-r from-white/20 to-white/10 text-white flex items-center justify-center font-semibold text-lg shadow-2xl hover:scale-105 transition-all duration-300 z-40 border border-white/30"
