--- a/services.html
+++ b/services.html
@@ -103,7 +103,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12">
         <!-- Brand -->
         <div>
-          <h3 class="text-white font-bold mb-2">Yci</h3>
+          <h3 class="text-white font-bold mb-2">ycibangladesh</h3>
           <p class="text-white mb-2">
              To build a climate resilient Bangladesh where youth leads toward sustainable Change
           </p>
@@ -141,7 +141,7 @@
           <ul class="space-y-3 text-sm">
             <li class="flex items-start">
               <i class="fas fa-map-marker-alt mt-1 mr-3 text-accent"></i>
-              <span class="text-white mb-2">University of Dhaka, Dhaka, Bangladesh</span>
+              <span class="text-white mb-2">Dhaka, Bangladesh</span>
             </li>
             <li class="flex items-start">
               <i class="fas fa-envelope mt-1 mr-3 text-accent"></i>
