--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
               </div>
               <div>
                 <h3 class="text-white font-semibold">Email</h3>
-                <p class="text-white/80">jycibangladesh@gmail.com</p>
+                <p class="text-white/80">ycibangladesh@gmail.com</p>
               </div>
             </div>
 
