--- a/contact.html
+++ b/contact.html
@@ -203,11 +203,11 @@
             </li>
             <li class="flex items-start">
               <i class="fas fa-envelope mt-1 mr-3 text-accent"></i>
-              <span class="text-white mb-2">info@bionova.org</span>
+              <span class="text-white mb-2">ycibangladesh@gmail.com</span>
             </li>
             <li class="flex items-start">
               <i class="fas fa-phone mt-1 mr-3 text-accent"></i>
-              <span class="text-white mb-2">+880 17XX-XXXXXX</span>
+              <span class="text-white mb-2">01919403296 / 01980632583</span>
             </li>
           </ul>
         </div>
