--- a/team.html
+++ b/team.html
@@ -281,6 +281,18 @@
             background: rgba(255, 255, 255, 0.3);
             border-color: rgba(255, 255, 255, 0.5);
         }
+        #mobileMenu {
+            background: rgba(255, 255, 255, 0.25); /* more transparent for true glass effect */
+            backdrop-filter: blur(12px);
+           -webkit-backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 12px;
+            margin-top: 0.5rem;
+            padding: 0.75rem 0;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+ 
+ 
     </style>
     
     <script>
@@ -458,11 +470,11 @@
             </li>
             <li class="flex items-start">
               <i class="fas fa-envelope mt-1 mr-3 text-accent"></i>
-              <span class="text-white mb-2">info@bionova.org</span>
+              <span class="text-white mb-2">ycibangladesh@gmail.com</span>
             </li>
             <li class="flex items-start">
               <i class="fas fa-phone mt-1 mr-3 text-accent"></i>
-              <span class="text-white mb-2">+880 17XX-XXXXXX</span>
+              <span class="text-white mb-2">01919403296 / 01980632583</span>
             </li>
           </ul>
         </div>
