--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="webtoken" content="width=device-width, initial-scale=1.0" />
   <title>Contact - yci</title>
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/content/images/IMG_5811.png">
 
   <!-- Tailwind CSS via CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
