--- a/team_detail.html
+++ b/team_detail.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading... - BioNova</title>
+    <title>Loading... - YCI</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/content/images/IMG_5811.png">
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
