--- a/team.html
+++ b/team.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Team - BioNova</title>
+    <title>Our Team - YCI</title>
     <meta name="description" content="Meet the leadership and experts behind BioNova — driving sustainable development and innovation.">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/content/images/IMG_5811.png">
     
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
