--- a/team_detail.html
+++ b/team_detail.html
@@ -432,7 +432,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12">
                 <!-- Brand -->
                 <div>
-                    <h3 class="glass-text-primary font-bold text-xl mb-4">BioNova</h3>
+                    <h3 class="glass-text-primary font-bold text-xl mb-4">yci-bangladesh</h3>
                     <p class="glass-text-secondary mb-4">
                         Building sustainable futures through innovation, equity, and community-led action.
                     </p>
@@ -459,11 +459,11 @@
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-envelope mt-1 mr-4 text-white/80"></i>
-                            <span class="glass-text-secondary">info@bionova.org</span>
+                            <span class="glass-text-secondary">ycibangladesh@gmail.com</span>
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-phone mt-1 mr-4 text-white/80"></i>
-                            <span class="glass-text-secondary">+880 17XX-XXXXXX</span>
+                            <span class="glass-text-secondary">01919403296 / 01980632583</span>
                         </li>
                     </ul>
                 </div>
