--- a/article.html
+++ b/article.html
@@ -234,7 +234,7 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-8 md:gap-12">
         <!-- Brand -->
         <div>
-          <h3 class="font-bold text-lg sm:text-xl mb-3 sm:mb-4">BioNova</h3>
+          <h3 class="font-bold text-lg sm:text-xl mb-3 sm:mb-4">ycibangladesh</h3>
           <p class="text-sm sm:text-base mb-4">
             Building sustainable futures through innovation, equity, and community-led action.
           </p>
@@ -261,11 +261,11 @@
             </li>
             <li class="flex items-start">
               <span class="mr-3">✉️</span>
-              <span>info@bionova.org</span>
+              <span>ycibangladesh@gmail.com</span>
             </li>
             <li class="flex items-start">
               <span class="mr-3">📞</span>
-              <span>+880 17XX-XXXXXX</span>
+              <span>01919403296 / 01980632583</span>
             </li>
           </ul>
         </div>
@@ -283,7 +283,7 @@
 
       <!-- Copyright -->
       <div class="border-t border-white/20 mt-8 pt-6 text-center text-sm">
-        <p>&copy; 2025 BioNova. All rights reserved.</p>
+        <p>&copy; 2025 YCI. All rights reserved.</p>
         <div class="mt-3 space-x-4">
           <a href="#" class="hover:text-white transition-colors">Privacy</a>
           <span>•</span>
