--- a/articles.html
+++ b/articles.html
@@ -390,7 +390,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12">
         <!-- Brand -->
         <div>
-          <h3 class="text-white font-bold mb-2">Yci</h3>
+          <h3 class="text-white font-bold mb-2">ycibangladesh</h3>
           <p class="text-white mb-2">
              To build a climate resilient Bangladesh where youth leads toward sustainable Change
           </p>
@@ -398,7 +398,7 @@
             <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
+            <a href="https://www.facebook.com/p/YCI-Bangladesh-61576373540871/" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
               <i class="fab fa-facebook-f"></i>
             </a>
             <a href="https://www.linkedin.com/company/yci-bangladesh/" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
@@ -409,6 +409,7 @@
             </a>
           </div>
         </div>
+
 
         <!-- Quick Links -->
         <div>
