--- a/article.html
+++ b/article.html
@@ -234,7 +234,7 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-8 md:gap-12">
         <!-- Brand -->
         <div>
-          <h3 class="font-bold text-lg sm:text-xl mb-3 sm:mb-4">ycibangladesh</h3>
+          <h3 class="font-bold text-lg sm:text-xl mb-3 sm:mb-4">YCI bangladesh</h3>
           <p class="text-sm sm:text-base mb-4">
             Building sustainable futures through innovation, equity, and community-led action.
           </p>
