--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
       <div class="absolute bottom-1/4 left-1/4 w-8 h-8 bg-secondary rounded-full opacity-10 floating-element" style="animation-delay: -4s;"></div>
       
       <div class="relative z-10 max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-white">
-        <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-6 page-load">
+        <h2 class="text-white text-4xl sm:text-5xl md:text-6xl font-bold mb-6 page-load">
           TO BUILD A CLIMATE RESILIENT BANGLADESH WHERE YOUTH LEADS TOWARD
         </h2>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
@@ -373,7 +373,7 @@
         <div class="pure-glass rounded-3xl p-8 text-center">
           <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <div>
-              <div class="text-4xl md:text-5xl font-bold stat-number">50+</div>
+              <div class="text-4xl md:text-5xl font-bold stat-number">120+</div>
               <div class="text-lg md:text-xl stat-title">Team Members</div>
             </div>
             <div>
@@ -404,7 +404,7 @@
   <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="pure-glass rounded-3xl overflow-hidden group">
       <img 
-        src="content/images/Screenshot 2025-12-16 222947.png" 
+        src="content/images/IMG_5811.png" 
         alt="Youth leading climate action in Bangladesh" 
         class="w-full h-64 sm:h-96 object-cover transition-transform duration-700 group-hover:scale-105"
         loading="lazy"
@@ -433,7 +433,7 @@
 <!-- FAQ Section -->
 <section class="py-16 page-load delay-4">
   <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-    <h2 class="text-3xl md:text-4xl font-bold text-center mb-8">Frequently Asked Questions</h2>
+    <h2 class="text-white text-3xl md:text-4xl font-bold text-center mb-8">Frequently Asked Questions</h2>
     <div id="faq-accordion" class="space-y-4">
       <!-- FAQ 1 -->
       <div class="pure-glass rounded-xl overflow-hidden">
@@ -509,7 +509,7 @@
     <section class="py-16 page-load delay-5">
       <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-12">
-          <h2 class="text-4xl md:text-5xl font-bold mb-4">Our Events</h2>
+          <h2 class="text-white text-4xl md:text-5xl font-bold mb-4">Our Events</h2>
           <p class="text-white max-w-2xl mx-auto">placeholder</p>
         </div>
         <div id="articles-container" class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -527,7 +527,7 @@
     <section class="py-16 page-load delay-6">
       <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="pure-glass rounded-3xl p-12 text-center text-white group hover:scale-[1.02] transition-all duration-500">
-          <h2 class="text-4xl md:text-5xl font-bold mb-4">Meet Our entire Team</h2>
+          <h2 class="text-white text-4xl md:text-5xl font-bold mb-4">Meet Our entire Team</h2>
           <p class="text-xl mb-8">placeholder</p>
           <a href="team.html" class="px-8 py-4 bg-white text-primary rounded-full font-bold text-lg hover:bg-opacity-90 hover:scale-105 transition glow-button inline-block">
             View Full Team
@@ -543,7 +543,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12">
         <!-- Brand -->
         <div>
-          <h3 class="text-white font-bold mb-2">ycibangladesh</h3>
+          <h3 class="text-white font-bold mb-2">YCI bangladesh</h3>
           <p class="text-white mb-2">
              To build a climate resilient Bangladesh where youth leads toward sustainable Change
           </p>
