--- a/services.html
+++ b/services.html
@@ -106,7 +106,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12">
         <!-- Brand -->
         <div>
-          <h3 class="text-white font-bold mb-2">ycibangladesh</h3>
+          <h3 class="text-white font-bold mb-2">YCI bangladesh</h3>
           <p class="text-white mb-2">
              To build a climate resilient Bangladesh where youth leads toward sustainable Change
           </p>
