--- a/team_detail.html
+++ b/team_detail.html
@@ -432,7 +432,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12">
                 <!-- Brand -->
                 <div>
-                    <h3 class="glass-text-primary font-bold text-xl mb-4">yci-bangladesh</h3>
+                    <h3 class="glass-text-primary font-bold text-xl mb-4">YCI bangladesh</h3>
                     <p class="glass-text-secondary mb-4">
                         Building sustainable futures through innovation, equity, and community-led action.
                     </p>
