--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between items-center h-16">
         <a href="index.html" class="flex items-center page-load">
-          <img src="https://via.placeholder.com/40/003f87/FFFFFF?text=YCI" alt="YCI Bangladesh Logo"
+          <img src="/content/images/IMG_5811.png" alt="YCI Bangladesh Logo"
                class="w-10 h-10 rounded-full object-cover border-2 border-white/20"
                onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2240%22 height=%2240%22 viewBox=%220 0 40 40%22><rect width=%2240%22 height=%2240%22 fill=%22%23003f87%22/><text x=%2250%25%22 y=%2250%25%22 font-family=%22Inter%22 font-size=%2216%22 fill=%22white%22 text-anchor=%22middle%22 dominant-baseline=%22middle%22>YCI</text></svg>'; this.parentElement.innerHTML='<div class=\'w-10 h-10 rounded-full bg-blue-900 flex items-center justify-center text-white font-bold\'>YCI</div>';">
           <span class="ml-2 text-white font-bold text-xl hidden sm:block">YCI Bangladesh</span>
